--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "musicapp2",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +8,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "4.4.2",
     "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.12",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-track-player": "^4.0.1",
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
